# maritime-vrp

./: .gitignore  CITATION.cff  CMakeLists.txt  Makefile  README.md  main  main.cpp
base/: Makefile  arc.h  base.h  graph.cpp  graph.h  graph_properties.h  node.cpp  node.h  port.h  problem.cpp  problem.h  vessel_class.cpp  vessel_class.h
branching/: Makefile  bb_node.cpp  bb_node.h  bb_tree.cpp  bb_tree.h  cycle.cpp  cycle.h
cmake/: FindCplex.cmake
column/: Makefile  column.cpp  column.h  column_pool.h  solution.cpp  solution.h
data/: baltic_2_11ports.json  baltic_2_3_4.json  baltic_2_3_6.json  baltic_2_9ports.json  baltic_2_brouer.json  baltic_2_brouer_1hr.json  baltic_2_unc.json  baltic_3_2_4.json  baltic_3_2_6.json  baltic_3_3_4.json  baltic_3_3_6.json  baltic_4_2_4.json  baltic_4_3_4.json  baltic_6_2_6.json  baltic_6_3_6.json  baltic_unc.json  problem_data.json  problem_data_5p.json  problem_data_baltic.json  program_params.json  waf_16_3_1.json  waf_16_4_1.json  waf_16_8_1.json  waf_16_unc.json  waf_24_2_1.json  waf_24_3_1.json  waf_24_6_1.json  waf_24_unc.json  waf_8_11ports.json  waf_8_16_1.json  waf_8_6_1.json  waf_8_8_1.json  waf_8_unc.json
data/linerlib/: Demand_ButterflyExample.csv  Demand_Example.csv  Demand_WAF.csv  fleet_ButterflyExample.csv  fleet_Example.csv  fleet_data.csv
data/new/: Baltic_1_2_4_250_0_0_0_60_78.json  Baltic_1_2_4_250_0_0_0_no_no.json  Baltic_1_2_4_250_0_0_1_60_78.json  Baltic_1_2_4_250_0_0_1_no_no.json  Baltic_1_2_4_250_0_no_no_60_78.json  Baltic_1_2_4_250_0_no_no_no_no.json  Baltic_1_2_4_250_100_0_0_60_78.json  Baltic_1_2_4_250_100_0_0_no_no.json  Baltic_1_2_4_250_100_0_1_60_78.json  Baltic_1_2_4_250_100_0_1_no_no.json  Baltic_1_2_4_250_100_no_no_60_78.json  Baltic_1_2_4_250_100_no_no_no_no.json  Baltic_1_2_4_250_10_0_0_60_78.json  Baltic_1_2_4_250_10_0_0_no_no.json  Baltic_1_2_4_250_10_0_1_60_78.json  Baltic_1_2_4_250_10_0_1_no_no.json  Baltic_1_2_4_250_10_no_no_60_78.json  Baltic_1_2_4_250_10_no_no_no_no.json  Baltic_1_2_4_250_1_0_0_60_78.json  Baltic_1_2_4_250_1_0_0_no_no.json  Baltic_1_2_4_250_1_0_1_60_78.json  Baltic_1_2_4_250_1_0_1_no_no.json  Baltic_1_2_4_250_1_no_no_60_78.json  Baltic_1_2_4_250_1_no_no_no_no.json  Baltic_1_2_4_250_20_0_0_60_78.json  Baltic_1_2_4_250_20_0_0_no_no.json  Baltic_1_2_4_250_20_0_1_60_78.json  Baltic_1_2_4_250_20_0_1_no_no.json  Baltic_1_2_4_250_20_no_no_60_78.json  Baltic_1_2_4_250_20_no_no_no_no.json  Baltic_1_2_4_250_2_0_0_60_78.json  Baltic_1_2_4_250_2_0_0_no_no.json  Baltic_1_2_4_250_2_0_1_60_78.json  Baltic_1_2_4_250_2_0_1_no_no.json  Baltic_1_2_4_250_2_no_no_60_78.json  Baltic_1_2_4_250_2_no_no_no_no.json  Baltic_1_2_4_250_30_0_0_60_78.json  Baltic_1_2_4_250_30_0_0_no_no.json  Baltic_1_2_4_250_30_0_1_60_78.json  Baltic_1_2_4_250_30_0_1_no_no.json  (+1851 more)
data/old_thesis_data/: baltic_2_10ports.json  baltic_2_8ports.json  baltic_2_tw.json  program_params.json  waf_8_12ports.json  waf_8_13ports.json  waf_8_brouer.json
data/results/: baltic_2_3_4.txt  baltic_2_3_6.txt  baltic_2_unc.txt  baltic_3_2_4.txt  baltic_3_2_6.txt  baltic_3_3_4.txt  baltic_3_3_6.txt  baltic_4_2_4.txt  baltic_4_3_4.txt  baltic_6_2_6.txt  baltic_6_3_6.txt  waf_16_3_1.txt  waf_16_4_1.txt  waf_16_8_1.txt  waf_16_unc.txt  waf_24_2_1.txt  waf_24_3_1.txt  waf_24_6_1.txt  waf_8_16_1.txt  waf_8_6_1.txt  waf_8_8_1.txt  waf_8_unc.txt
data/tuning/: Baltic_1_2_4_250_0_0_0_60_78.json  Baltic_1_3_5_500_2_0_1_60_78.json  WAF_4_1_2_500_100_no_no_no_no.json
masterproblem/: Makefile  mp_integer_solution.h  mp_linear_solution.h  mp_solver.cpp  mp_solver.h
opt/: Baltic_generate_instances.sh  Example_generate_instances.sh  WAF_generate_instances.sh  create_dtu_launchers.rb  data_generator.rb  dtu_launch_jobs.sh  launch_jobs.sh  parser.rb  port.rb  request.rb  simple_tune.rb  solved_instances.txt  timeout  tune.rb  vessel_class.rb
opt/data_generator/: Baltic_generate_instances.sh  ButterflyExample_generate_instances.sh  Example_generate_instances.sh  WAF_generate_instances.sh  data_generator.rb  parser.rb  port.rb  request.rb  vessel_class.rb
opt/launchers/: Baltic_1_2_4_250_0_0_0_60_78.sh  Baltic_1_2_4_250_0_0_0_no_no.sh  Baltic_1_2_4_250_0_0_1_60_78.sh  Baltic_1_2_4_250_0_0_1_no_no.sh  Baltic_1_2_4_250_0_no_no_60_78.sh  Baltic_1_2_4_250_0_no_no_no_no.sh  Baltic_1_2_4_250_100_0_0_60_78.sh  Baltic_1_2_4_250_100_0_0_no_no.sh  Baltic_1_2_4_250_100_0_1_60_78.sh  Baltic_1_2_4_250_100_0_1_no_no.sh  Baltic_1_2_4_250_100_no_no_60_78.sh  Baltic_1_2_4_250_100_no_no_no_no.sh  Baltic_1_2_4_250_1_0_0_60_78.sh  Baltic_1_2_4_250_1_0_0_no_no.sh  Baltic_1_2_4_250_1_0_1_60_78.sh  Baltic_1_2_4_250_1_0_1_no_no.sh  Baltic_1_2_4_250_1_no_no_60_78.sh  Baltic_1_2_4_250_1_no_no_no_no.sh  Baltic_1_2_4_250_5_0_0_60_78.sh  Baltic_1_2_4_250_5_0_0_no_no.sh  Baltic_1_2_4_250_5_0_1_60_78.sh  Baltic_1_2_4_250_5_0_1_no_no.sh  Baltic_1_2_4_250_5_no_no_60_78.sh  Baltic_1_2_4_250_5_no_no_no_no.sh  Baltic_1_2_4_375_0_0_0_60_78.sh  Baltic_1_2_4_375_0_0_0_no_no.sh  Baltic_1_2_4_375_0_0_1_60_78.sh  Baltic_1_2_4_375_0_0_1_no_no.sh  Baltic_1_2_4_375_0_no_no_60_78.sh  Baltic_1_2_4_375_0_no_no_no_no.sh  Baltic_1_2_4_375_100_0_0_60_78.sh  Baltic_1_2_4_375_100_0_0_no_no.sh  Baltic_1_2_4_375_100_0_1_60_78.sh  Baltic_1_2_4_375_100_0_1_no_no.sh  (+446 more)
preprocessing/: Makefile  graph_generator.cpp  graph_generator.h  problem_data.cpp  problem_data.h  program_params.cpp  program_params.h
src/: main.cpp
src/base/: arc.cpp  arc.h  (+10 more)
subproblem/: Makefile  exact_solver.cpp  exact_solver.h  heuristics_solver.cpp  heuristics_solver.h  id_maps.h  labelling.cpp  labelling.h  sp_solver.cpp  sp_solver.h  threaded_solver.cpp  threaded_solver.h
util/: Makefile  knapsack.cpp  knapsack.h
(+550 files in other folders)
